poll consensus state
